--- a/README
+++ b/README
@@ -19,13 +19,16 @@ Install django libs on ubuntu:
 
   sudo aptitude install python-django
 
+Clone repository
+   git clone http://cheuveulu@github.com/cheuveulu/LANBox.git
 Got to codadmin folder
+   cd LANBox/codadmin
 
 * First time :
    python manager.py syncdb
 
 Run web server
-  python manager.py runserver 0.0.0.0:8000
+   python manager.py runserver 0.0.0.0:8000
 
 
 Happy hacking
