--- a/README
+++ b/README
@@ -10,14 +10,19 @@ codadmin - new Webui based on Django
 
 https://docs.djangoproject.com/en/1.3/
 
+------------
+Requirements
+------------
+Django 1.3
+SQLite 3
 
 ------------
 DEVELOPEMENT
 ------------
 
-Install django libs on ubuntu:
+Install django libs on ubuntu 11.10:
 
-  sudo aptitude install python-django
+  sudo aptitude install python-django sqlite3
 
 Clone repository
    git clone http://github.com/cheuveulu/LANBox.git
@@ -25,10 +30,10 @@ Got to codadmin folder
    cd LANBox/codadmin
 
 * First time :
-   python manager.py syncdb
+   python manage.py syncdb
 
 Run web server
-   python manager.py runserver 0.0.0.0:8000
+   python manage.py runserver 0.0.0.0:8000
 
 
 --------------
