--- a/README
+++ b/README
@@ -15,6 +15,7 @@ Requirements
 ------------
 Django 1.3
 SQLite 3
+python-psutil /* Will be removed shortly */
 
 ------------
 DEVELOPEMENT
@@ -22,7 +23,7 @@ DEVELOPEMENT
 
 Install django libs on ubuntu 11.10:
 
-  sudo aptitude install python-django sqlite3
+  sudo aptitude install python-django sqlite3 python-psutil
 
 Clone repository
    git clone http://github.com/cheuveulu/LANBox.git
@@ -39,8 +40,11 @@ Run web server
 --------------
 Usage
 --------------
+Status - Main page
+http://localhost:8000/
+
 Admin url
-http://IP/admin
+http://localhost:8000/admin
 
 
 Happy hacking
