--- a/README
+++ b/README
@@ -15,7 +15,6 @@ Requirements
 ------------
 Django 1.3
 SQLite 3
-python-psutil /* Will be removed shortly */
 
 ------------
 DEVELOPEMENT
@@ -23,7 +22,7 @@ DEVELOPEMENT
 
 Install django libs on ubuntu 11.10:
 
-  sudo aptitude install python-django sqlite3 python-psutil
+  sudo aptitude install python-django sqlite3
 
 Clone repository
    git clone http://github.com/cheuveulu/LANBox.git
